--- a/styles/style.css
+++ b/styles/style.css
@@ -23,3 +23,10 @@ footer {
   height: 3.5rem;
   color: white;
 }
+
+#portada{
+    max-width: 100%;
+    max-height: 30%;
+    height: 50vh;
+    width: 75vh;
+}
