--- a/styles/style.css
+++ b/styles/style.css
@@ -21,8 +21,9 @@ footer {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 3.5rem;
+  height: 5rem;
   color: white;
+  padding: 15px;
 }
 
 #portada{
